# attention

./: README.md  pyproject.toml
attention/: attention.py  flash_attention.py
tests/: test_attention.py  test_flash_attention.py
